--- a/BlazorMovie/Components/UIComponents/SearchComponent.razor
+++ b/BlazorMovie/Components/UIComponents/SearchComponent.razor
@@ -91,10 +91,20 @@
     }
     private async Task FetchSearchResults()
     {
-        Console.WriteLine($"Category: {selectedCategory}, SearchTerm: {searchTerm}");
-        searchResults = await searchService.GetSearchModelAsync(selectedCategory, searchTerm);
-        StateHasChanged();
+        try
+        {
+            Console.WriteLine($"Category: {selectedCategory}, SearchTerm: {searchTerm}");
+            searchResults = await searchService.GetSearchModelAsync(selectedCategory, searchTerm);
+            Console.WriteLine($"Search Results Count: {searchResults?.Count()}");
+            StateHasChanged();
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Error fetching search results: {ex.Message}");
+            ShowErrorMessage("An error occurred while fetching search results.");
+        }
     }
+
 
     private bool ValidateSearchTerm()
     {
